# Scholarship-Application

./: .gitignore  README.md  main.py  pyproject.toml
migrations/: 20260625_01_nkbov-create-users-tabe.sql  20260625_02_6i1p7-create-provider-table.sql  20260625_03_mx3sk-create-personal-details-table.sql
src/: database.py  dependencies.py  exceptions.py  settings.py
src/api/: dependencies.py  exception_registry.py
src/api/routes/: authentication.py
src/api/shemas/: authentication.py
src/command/commands/: authentication.py  personal.py  provider.py
src/command/repositories/: authentication.py  personal.py  provider.py
src/command/services/: authentication.py  personal.py
src/core/: authentication.py  oauth2.py
