[project]
name = "scholarship-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "fastapi[all]>=0.138.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic[all]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
]
