[project]
name = "scholarship-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "fastapi[all]>=0.138.0",
    "passlib>=1.7.4",
    "pogo-migrate>=0.4.6",
    "psycopg2>=2.9.12",
    "pydantic[all]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
]

[tool.pogo]
migrations = './migrations'
database_config = '{POGO_DATABASE}'
schema = 'public'
